Upgrading to java17 as minimum (#936)
* Upgrading to java17 as minimum

Signed-off-by: Haroon Sheikh <haroon.sheikh@sky.uk>

* Fix more Java code style/deprecation warnings and suboptimal pieces

Signed-off-by: Chad Wilson <29788154+chadlwilson@users.noreply.github.com>

* Switch to more efficient String util operations

Signed-off-by: Chad Wilson <29788154+chadlwilson@users.noreply.github.com>

* Update protos

Signed-off-by: Chad Wilson <29788154+chadlwilson@users.noreply.github.com>

* Bump to go 1.25

Signed-off-by: Chad Wilson <29788154+chadlwilson@users.noreply.github.com>

* Test on Java 25

Signed-off-by: Chad Wilson <29788154+chadlwilson@users.noreply.github.com>

* Fix typo in actions names

Signed-off-by: Chad Wilson <29788154+chadlwilson@users.noreply.github.com>

---------

Signed-off-by: Haroon Sheikh <haroon.sheikh@sky.uk>
Signed-off-by: Chad Wilson <29788154+chadlwilson@users.noreply.github.com>
Co-authored-by: Chad Wilson <29788154+chadlwilson@users.noreply.github.com>