@@ -11,6 +11,7 @@ import com.thoughtworks.gauge.Logger;
 import com.thoughtworks.gauge.registry.ClassInitializerRegistry;
 import org.reflections.Reflections;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.Set;
 
 public class CustomClassInitializerScanner implements IScanner {
@@ -25,12 +26,15 @@ public class CustomClassInitializerScanner implements IScanner {
         if (initializers.size() == 1) {
             Class<? extends ClassInitializer> initializer = initializers.iterator().next();
             try {
-                ClassInitializerRegistry.classInitializer(initializer.newInstance());
+                ClassInitializerRegistry.classInitializer(initializer.getDeclaredConstructor().newInstance());
                 Logger.debug(String.format("Using %s as class initializer", initializer.getName()));
             } catch (InstantiationException e) {
                 Logger.error(String.format("Could not instantiate %s, continuing using default class initializer", initializer.getName()));
-            } catch (IllegalAccessException e) {
+            } catch (IllegalAccessException | NoSuchMethodException e) {
                 Logger.error(String.format("Could not access %s constructor, continuing using default class initializer", initializer.getName()));
+            } catch (InvocationTargetException e) {
+                Logger.error(String.format("%s's default constructor threw an error [%s], continuing using default class initializer", initializer.getName(), e));
+                throw new RuntimeException(e);
             }
         }
 
