@@ -10,15 +10,11 @@ import com.thoughtworks.gauge.GaugeConstant;
 import com.thoughtworks.gauge.Logger;
 
 import javax.imageio.ImageIO;
-import java.awt.GraphicsDevice;
-import java.awt.GraphicsEnvironment;
-import java.awt.Rectangle;
-import java.awt.Robot;
+import java.awt.*;
 import java.awt.image.BufferedImage;
 import java.io.ByteArrayInputStream;
 import java.io.File;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.UUID;
 
 /**
@@ -28,7 +24,7 @@ public class ScreenshotFactory {
 
     public static final String IMAGE_EXTENSION = "png";
     private static Class<? extends CustomScreenshot> customScreenshotGrabber;
-    private static ClassInstanceManager manager;
+    private final ClassInstanceManager manager;
 
     public ScreenshotFactory(ClassInstanceManager manager) {
         this.manager = manager;
@@ -46,8 +42,8 @@ public class ScreenshotFactory {
         if (customScreenshotGrabber != null) {
             try {
                 CustomScreenshot customScreenInstance = (CustomScreenshot) manager.get(customScreenshotGrabber);
-                if (customScreenInstance instanceof CustomScreenshotWriter) {
-                     return ((CustomScreenshotWriter) customScreenInstance).takeScreenshot();
+                if (customScreenInstance instanceof CustomScreenshotWriter writer) {
+                     return writer.takeScreenshot();
                 } else {
                     byte[] bytes = ((ICustomScreenshotGrabber) customScreenInstance).takeScreenshot();
                     File file = generateUniqueScreenshotFile();
@@ -66,7 +62,7 @@ public class ScreenshotFactory {
 
     private File generateUniqueScreenshotFile() {
         String fileName = String.format("screenshot-%s.%s", UUID.randomUUID().toString(), IMAGE_EXTENSION);
-        Path path = Paths.get(System.getenv(GaugeConstant.SCREENSHOTS_DIR_ENV), fileName);
+        Path path = Path.of(System.getenv(GaugeConstant.SCREENSHOTS_DIR_ENV), fileName);
         return new File(path.toAbsolutePath().toString());
     }
 
